 * Deprecated PlatformInfo::GetConfigureCommandLine.
 * Renamed ConditionedNormalProcess to ConditionedGaussianProcess
 * Deprecated Field::getSample in favor of getValues
 * Deprecated SobolIndicesAlgorithm::Generate in favor of SobolIndicesExperiment.

=== Python module ===

=== Miscellaneous ===
 * Changed bounds evaluation in UniformFactory, BetaFactory

=== Bug fixes ===
 * #890 (Cannot build triangular distribution)
 * #891 (Viewer issue with Pairs drawables)
 * #895 (Trouble reading CSV files with separators in description)
 * #896 (Python iteration in ProcessSample leads to capacity overflow)
 * #897 (Bug in Graph::draw with small data)
 * #898 (Could not save/load some persistent classes)
 * #899 (PythonDistribution copula crash when parallelism is active)
 * #902 (NormalGamma constructor builds wrong link function)
 * #905 (Bogus MaternModel::setParameter)
 * #906 (t_LevelSetMesher_std fails on most non-Intel based chips)
 * #907 (Notation)
 * #908 (Documentation: change titles)
 * #909 (Wrong argument type in the API doc)
 * #910 (Graph of a d-dimensionnal distribution)
 * #911 (In the Field class, the getSample and getValues methods are duplicate)
 * #912 (Wrong description of Histogram constructor parameters)
 * #914 (KarhunenLoeveQuadratureAlgorithm crashes for covariance models of dimension>1)
 * #917 (Bug in RandomMixture::computeCDF())
 * #918 (The class SobolIndicesAlgorithm has a draw method which has no example)
 * #919 (Wrong simplification mechanism in MarginalTransformationEvaluation for Exponential distribution)
 * #921 (Cannot print a FixedExperiment when built from sample and weight)
 * #923 (Fix ExponentialModel::getParameter for diagonal correlation)
 * #924 (Probleme with the factory of a Generalized Pareto distribution)
 * #927 (Functional chaos is memory hungry)
 * #929 (The labels of the sensitivity analysis graphics are poor)
 * #930 (The getMean method has a weird behavior on parametrized distribution)
